--- a/index.html
+++ b/index.html
@@ -2,8 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Welcome|Andrew Brough</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-    Welcome.
+    <h1>Andrew Brough</h1>
+    <h2>Designer, Developer, Artist</h2>
+    <h1></h1>
+    <div id="entry">
+        <h3>Andrew Brough</h3>
+        <p>Hi I'm Andrew Brough.</p>
+        <img class="projectImage" src="https://avatars2.githubusercontent.com/u/5230219?v=3&s=460">
+    </div>
+
+    <div id="entry">
+        <h3>Andrew Brough</h3>
+        <p>Hi I'm Andrew Brough.</p>
+        <img class="projectImage" src="https://avatars2.githubusercontent.com/u/5230219?v=3&s=460">
+    </div>
+
+    <div id="entry">
+        <h3>Andrew Brough</h3>
+        <p>Hi I'm Andrew Brough.</p>
+        <img class="projectImage" src="https://avatars2.githubusercontent.com/u/5230219?v=3&s=460">
+    </div>
+
+    <div id="entry">
+        <h3>Andrew Brough</h3>
+        <p>Hi I'm Andrew Brough.</p>
+        <img class="projectImage" src="https://avatars2.githubusercontent.com/u/5230219?v=3&s=460">
+    </div>
 </body>
 </html>
