--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Welcome|Andrew Brough</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+  <title>Welcome|Andrew Brough</title>
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <script src="jquery-2.1.3.min.js"></script>
+  <script src="main.js"></script>
 </head>
+
 <body>
   <header>
     <h1 id="headerName" class="headerItem">Andrew Brough</h1>
@@ -13,7 +16,7 @@
   </header>
 
   <div class="mainContent">
-
+    <p>stuff</p>
   </div>
 </body>
 </html>
