--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Welcome|Andrew Brough</title>
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" type="text/css" href="main2.css" />
   <script src="jquery-2.1.3.min.js"></script>
   <script src="main.js"></script>
 </head>
 
 <body>
   <header>
-    <h1 id="headerName" class="headerItem">Andrew Brough</h1>
-    <div class="headerTab headerTab1"><h2>Portfolio</h2></div>
-    <div class="headerTab headerTab2"><h2>Contact</h2></div>
-    <div class="headerTab headerTab3"><h2>Blog</h2></div>
+    <div class="headerTab"><h2>Contact</h2></div>
+    <div class="headerTab"><h2>Portfolio</h2></div>
+    <div class="headerTab"><h2>Blog</h2></div>
   </header>
 
-  <div class="mainContent">
-    <p>stuff</p>
+  <div class="content">
+    <h1>Andrew Brough</h1>
+    <div class="coverImage">
+      <img src="https://scontent-lga.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/380964_10151350076155928_827175196_n.jpg?oh=bbb6132f020a1e250a44a134b7ed0bbe&oe=55AE75FA" />
+    </div>
+    <p>stuffstuff stuff stuff stuff stuff stuff stuff stuff 
+      stuff stuff stuff stuff stuff stuff stuff stuff stuff 
+      stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
   </div>
 </body>
 </html>
