Added 2 projects to main page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Welcome|Andrew Brough</title>
   <link rel="stylesheet" type="text/css" href="main2.css" />
   <script src="jquery-2.1.3.min.js"></script>
-  <script src="main.js"></script>
+  <script src="main2.js"></script>
 </head>
 
 <body>
@@ -17,11 +17,43 @@
   <div class="content">
     <h1>Andrew Brough</h1>
     <div class="coverImage">
-      <img src="https://scontent-lga.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/380964_10151350076155928_827175196_n.jpg?oh=bbb6132f020a1e250a44a134b7ed0bbe&oe=55AE75FA" />
+      <img src="img/AndrewBrough-cropped.jpg" />
     </div>
-    <p>stuffstuff stuff stuff stuff stuff stuff stuff stuff 
-      stuff stuff stuff stuff stuff stuff stuff stuff stuff 
-      stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+    <p>I'm a passionate and driven young developer and designer who is fueled by innovation and unique projects. I love working alongside knowledgeable creatives and aim for the highest standards in everything I do. I code, design and create art for my own games and web projects in my free time, and love to tackle a new challenge. Throwing ideas at the wall and seeing what sticks is my forte, and I always have something to contribute in creative discussions. I'm interested in all things related to the fusion of design, user experience, software and hardware.</p>
+
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>Hyperion</h3>
+      <img src="img\projects\SP_ProjectMidnight/projectmidnight_thumbnail.jpg" />
+      <p>
+        Light is your only friend as you try to make your way off of an abandoned space cruiser. Facing your choice of fear, you, the Stowaway, must find your path through the ship. If you stray too far away from light, you will be consumed by darkness. By providing power to portions of the ship and using a lantern to guide your way, you solve puzzles to pass through the ship's unique areas. You hear alarming noises, bumps and bangs as you travel across the ship. You quickly learn that there is also a monster aboard the ship, which stalks you. As you struggle with facing your fears, you struggle with keeping your sanity as you begin to hallucinate shadowy figures. When you learn that the ship is doomed to crash into a nearby planet, you must find a way off the ship, stay alive and avoid the lurking monster...
+      </p>
+      <p>
+        Midnight is an FPS game built in Unity using C# by my team of 5 students at Carleton University in the Interactive Multimedia and Design program. It is our senior project for which the project timeline is one entire year. The team includes myself, Eva Demers-Brett, Wilhelm Johannes Steyn, Curtis Field and Kat Phuon-Nguyen. The team is structured to utilise two main artists (Hannes and Curtis), one lead programmer (Eva), one assisting programmer (Kat) and one lead designer (Myself), and I also assist with programming.
+      </p>
+      <a href="http://ugrad.bitdegree.ca/~andrewbrough/midnightgame/">Website</a>
+      <br />
+      <a href="https://github.com/AndrewBrough/projectmidnight">Github</a>
+    </div>
+
+    <div class="project">
+      <h3 id="gameNeedsName">This Game Needs A Name</h3>
+      <img src="img/projects/GGJ_2014/GGJ2014_gameneedsname_title.png">
+      <img src="img/projects/GGJ_2014/GGJ2014_gameneedsname.png">
+      <p>For Global Game Jam 2014, I joined a team with my girlfriend, Bethany Dunfield, and Ryan Bottriell, two coders I've known for a few years now. The challenge: make a game for web, completely procedurally, with no assets at all. We made This Game Needs A Name_. I know what you're thinking - how uncreative! The player is actually asked to enter a name for the game as a way to seed the random level and character generation. It's a side scrolling game where you have to jump over spikes, shoot enemies or use your shield to protect yourself. However, anytime you do an action, it drains your colour (rgb values in the top right corner), so be careful when pressing buttons. The colour is also reflected in the world, and you'll see as you use up all your red, the world only shows the green and blue hues.
+      </p>
+      <p>We had a lot of fun making it, and though we hit a few snags along the way, we managed to finish the game by the 48 Hour deadline.
+      </p>
+      <a href="http://ugrad.bitdegree.ca/~andrewbrough/GGJ2014/menu.html">Play it here.</a>
+      <br />
+      <a href="http://globalgamejam.org/2014/games/game-needs-name"> GGJ2014 site.</a>
+    </div>
   </div>
+
+
+  <footer>
+    <a href="#top">Back to top</a>
+  </footer>
 </body>
 </html>
