--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Welcome|Andrew Brough</title>
+  <title>Andrew Brough Portfolio</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,700,300,400' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css" />
-  <script src="jquery-2.1.3.min.js"></script>
-  <script src="main.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <script src="libraries/jquery-2.1.3.min.js"></script>
+  <script src="index.js"></script>
 </head>
 
 <body>
-<!--
-  <header>
-    <div class="headerTab"><h2>Contact</h2></div>
-    <div class="headerTab"><h2>Portfolio</h2></div>
-    <div class="headerTab"><h2>Blog</h2></div>
-  </header>
--->
+
+  <!--<header>
+    <a href="">Get my resume here!</a>
+  </header>-->
+
+  <div id="backToTop">Back to Top</div>
+
+  <!--<div id="sidebar">
+    <div id="resume">
+      <a href="http://www.andrewbrough.ca/resume">Resume</a>
+    </div>
+  </div>-->
 
   <div class="content">
-    <h1 id="top">Andrew Brough</h1>
-    <div class="coverImage">
-      <img src="img/AndrewBrough-cropped.jpg" />
+
+    <!-- INTRODUCTION -->
+    <div class="introduction">
+      <h1 id="top">Andrew Brough</h1>
+      <div class="coverImage">
+        <img src="img/AndrewBrough-cropped.jpg" />
+      </div>
+      <p>With chops in both development and design, I understand both sides of digital product production. I can code with C#, C++, Java, JavaScript and am always learning new languages and strategies. I also design my own assets with Photoshop and Illustrator.</p>
     </div>
-    <p>With chops in both development and design, I understand both sides of digital product production. I can code with C#, C++, Java, JavaScript and am always learning new languages and strategies. I also design my own assets with Photoshop and Illustrator.</p>
 
     <!-- NAVIGATION -->
-    <h2>Projects</h2>
-    <div id="projectTags">
-      <ul>
-        <li id="unannouncedmagmicNAV">Unannounced Title for iOS</li>
-        <li id="applesNAV">Apples to Apples</li>
-        <li id="phase10facebookNAV">Phase 10 Facebook</li>
-        <li id="ottawajsNAV">OttawaJS Presentation</li>
-        <li id="liftoffNAV">Liftoff</li>
-        <li id="hyperionNAV">Hyperion</li>
-        <li id="gameneedsnameNAV">This Game Needs A Name_</li>
-        <li id="sloesiteNAV">Sustainable Living Ottawa East Website</li>
-      </ul>
+    <div class="navigation project">
+      <h2>Projects</h2>
+      <div id="projectTags">
+        <ul>
+          <!--<li id="unannouncedmagmicNAV">Unannounced Title for iOS</li>-->
+          <li id="applesNAV">Apples to Apples</li>
+          <li id="phase10facebookNAV">Phase 10 Facebook</li>
+          <li id="ottawajsNAV">OttawaJS Presentation</li>
+          <li id="liftoffNAV">Liftoff</li>
+          <li id="hyperionNAV">Hyperion</li>
+          <li id="gameneedsnameNAV">This Game Needs A Name_</li>
+          <li id="sloesiteNAV">Sustainable Living Ottawa East Website</li>
+        </ul>
+      </div>
     </div>
-
-    <div id="backToTop">Back To Top</div>
 
     <!-- UNANNOUNCED WITH MAGMIC -->
-    <div class="project" id="unannouncedmagmicPROJ">
+    <!--<div class="project" id="unannouncedmagmicPROJ">
       <h3>Unannounced Title for iOS</h3>
       <p> I spent 5 months working on a yet-unveiled title with Magmic inc. Developed in Unity3D with C#, I helped create a full featured iOS game along with 2 other developers. Although I can't say much yet, I can say it is a visual feast and I’m very excited to show more when it launches!</p>
-    </div>
+    </div>-->
 
     <!-- APPLES TO APPLES -->
     <div class="project" id="applesPROJ">
