updated moonrakers-mobile build with gzip compression instead of brotli

--- a/moonrakers-mobile/index.html
+++ b/moonrakers-mobile/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/prototype1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/prototype1.data.br",
-        frameworkUrl: buildUrl + "/prototype1.framework.js.br",
-        codeUrl: buildUrl + "/prototype1.wasm.br",
+        dataUrl: buildUrl + "/prototype1.data.gz",
+        frameworkUrl: buildUrl + "/prototype1.framework.js.gz",
+        codeUrl: buildUrl + "/prototype1.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "moonrakers-mobile",
