updated moonrakers-mobile build with dashing

--- a/moonrakers-mobile/index.html
+++ b/moonrakers-mobile/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/moonrakers-mobille.loader.js";
+      var loaderUrl = buildUrl + "/moonrakers-mobile.loader.js";
       var config = {
-        dataUrl: buildUrl + "/moonrakers-mobille.data",
-        frameworkUrl: buildUrl + "/moonrakers-mobille.framework.js",
-        codeUrl: buildUrl + "/moonrakers-mobille.wasm",
+        dataUrl: buildUrl + "/moonrakers-mobile.data",
+        frameworkUrl: buildUrl + "/moonrakers-mobile.framework.js",
+        codeUrl: buildUrl + "/moonrakers-mobile.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "moonrakers-mobile",
