--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
     <title>Create TanStack App - web-template</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" data-theme="dark"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
